--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "prisma generate && astro build",
+    "build": "prisma generate && prisma migrate deploy && astro build",
     "preview": "astro preview",
     "astro": "astro",
     "prisma:generate": "prisma generate",
@@ -19,6 +19,7 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^8.2.7",
     "@prisma/client": "^6.15.0",
     "@supabase/supabase-js": "^2.56.1",
@@ -26,7 +27,7 @@
     "astro": "^5.13.4",
     "mysql2": "^3.14.3",
     "prisma": "^6.15.0",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
