--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "astro": "^5.13.5",
     "mysql2": "^3.14.3",
     "prisma": "^6.15.0",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
