--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mysql2": "^3.14.3",
     "prisma": "^6.15.0",
     "tailwind": "^4.0.0",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
