--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^8.2.7",
+    "@astrojs/vue": "^5.1.1",
+    "@popperjs/core": "^2.11.8",
     "@prisma/client": "^6.15.0",
     "@supabase/supabase-js": "^2.56.1",
     "@tailwindcss/vite": "^4.1.12",
@@ -28,7 +30,9 @@
     "mysql2": "^3.14.3",
     "prisma": "^6.15.0",
     "tailwind": "^4.0.0",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "v-calendar": "^3.1.2",
+    "vue": "^3.5.22"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
