--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@supabase/supabase-js": "^2.56.1",
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.5",
+    "bcryptjs": "^2.4.3",
     "mysql2": "^3.14.3",
     "prisma": "^6.15.0",
     "tailwind": "^4.0.0",
