--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue": "^3.5.22"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
