--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "astro": "^5.13.5",
     "bcryptjs": "^2.4.3",
     "mysql2": "^3.14.3",
+    "postgres": "^3.4.7",
     "prisma": "^6.15.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.0",
